refactoring and change wrong implementation of mean_accuracy

--- a/tf.version.2/02.regression/02.mnist.model.fit.ipynb
+++ b/tf.version.2/02.regression/02.mnist.model.fit.ipynb
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "tf.__version__"
+    "print('TensorFlow version: {}'.format(tf.__version__))"
    ]
   },
   {
