--- a/tf.version.2/03.cnn/01.mnist.LeNet5.ipynb
+++ b/tf.version.2/03.cnn/01.mnist.LeNet5.ipynb
@@ -55,12 +55,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.compat.v1 import ConfigProto\n",
-    "from tensorflow.compat.v1 import InteractiveSession\n",
+    "print('TensorFlow version: {}'.format(tf.__version__))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if you have a memeory trouble then uncomment it\n",
+    "# from tensorflow.compat.v1 import ConfigProto\n",
+    "# from tensorflow.compat.v1 import InteractiveSession\n",
     "\n",
-    "config = ConfigProto()\n",
-    "config.gpu_options.allow_growth = True\n",
-    "session = InteractiveSession(config=config)"
+    "# config = ConfigProto()\n",
+    "# config.gpu_options.allow_growth = True\n",
+    "# session = InteractiveSession(config=config)"
    ]
   },
   {
@@ -228,7 +238,7 @@
    "source": [
     "# without training, just inference a model in eager execution:\n",
     "for images, labels in train_dataset.take(1):\n",
-    "  predictions = model(images[0:1], training=False)\n",
+    "  predictions = model(images[0:1])\n",
     "  print(\"Predictions: \", predictions.numpy())"
    ]
   },
@@ -286,9 +296,8 @@
     "# use Adam optimizer \n",
     "optimizer = tf.train.AdamOptimizer(1e-4)\n",
     "\n",
-    "# record loss and accuracy for every epoch\n",
+    "# record loss for every epoch\n",
     "mean_loss = tf.keras.metrics.Mean(\"loss\")\n",
-    "mean_accuracy = tf.keras.metrics.Mean(\"accuracy\")\n",
     "\n",
     "# save loss and accuracy history for plot\n",
     "loss_history = []\n",
@@ -323,7 +332,7 @@
     "    start_time = time.time()\n",
     "    \n",
     "    with tf.GradientTape() as tape:\n",
-    "      predictions = model(images, training=True)\n",
+    "      predictions = model(images)\n",
     "      loss_value = loss_object(labels, predictions)\n",
     "      acc_value = acc_object(labels, predictions)\n",
     "\n",
@@ -332,7 +341,6 @@
     "    global_step += 1\n",
     "    \n",
     "    mean_loss(loss_value)\n",
-    "    mean_accuracy(acc_value)\n",
     "    loss_history.append((global_step, mean_loss.result().numpy()))\n",
     "\n",
     "    if global_step % 10 == 0:\n",
@@ -341,14 +349,14 @@
     "      duration = time.time() - start_time\n",
     "      examples_per_sec = batch_size / float(duration)\n",
     "      print(\"epochs: {:.2f}, step: {}, loss: {:.3g}, accuracy: {:.4g}% ({:.2f} examples/sec; {:.4f} sec/batch)\".format(\n",
-    "          epochs, global_step, mean_loss.result().numpy(), mean_accuracy.result().numpy()*100, examples_per_sec, duration))\n",
+    "          epochs, global_step, mean_loss.result().numpy(), acc_value.numpy()*100, examples_per_sec, duration))\n",
     "      \n",
     "  # save mean accuracy for plot\n",
-    "  accuracy_history.append((global_step, mean_accuracy.result().numpy()))\n",
+    "  accuracy_history.append((global_step, acc_value.numpy()*100))\n",
     "\n",
     "  # clear the history\n",
     "  mean_loss.reset_states()\n",
-    "  mean_accuracy.reset_states()\n",
+    "  acc_object.reset_states()\n",
     "\n",
     "print(\"training done!\")"
    ]
@@ -418,8 +426,10 @@
    },
    "outputs": [],
    "source": [
+    "acc_object.reset_states()\n",
+    "\n",
     "for images, labels in test_dataset:\n",
-    "  predictions = model(images, training=False)\n",
+    "  predictions = model(images)\n",
     "  acc_object(labels, predictions)\n",
     "  \n",
     "print(\"test accuracy: {:.4g}%\".format(acc_object.result() * 100))"
@@ -462,7 +472,7 @@
     "\n",
     "batch_xs = test_data[batch_index]\n",
     "batch_ys = test_labels[batch_index]\n",
-    "y_pred_ = model(batch_xs, training=False)\n",
+    "y_pred_ = model(batch_xs)\n",
     "\n",
     "fig = plt.figure(figsize=(16, 10))\n",
     "for i, (px, py) in enumerate(zip(batch_xs, y_pred_)):\n",
