--- a/tf.version.2/03.cnn/02.mnist.LeNet5.functional.API.ipynb
+++ b/tf.version.2/03.cnn/02.mnist.LeNet5.functional.API.ipynb
@@ -56,12 +56,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.compat.v1 import ConfigProto\n",
-    "from tensorflow.compat.v1 import InteractiveSession\n",
+    "print('TensorFlow version: {}'.format(tf.__version__))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if you have a memeory trouble then uncomment it\n",
+    "# from tensorflow.compat.v1 import ConfigProto\n",
+    "# from tensorflow.compat.v1 import InteractiveSession\n",
     "\n",
-    "config = ConfigProto()\n",
-    "config.gpu_options.allow_growth = True\n",
-    "session = InteractiveSession(config=config)"
+    "# config = ConfigProto()\n",
+    "# config.gpu_options.allow_growth = True\n",
+    "# session = InteractiveSession(config=config)"
    ]
   },
   {
@@ -161,15 +171,15 @@
     "# for train\n",
     "N = len(train_data)\n",
     "train_dataset = tf.data.Dataset.from_tensor_slices((train_data, train_labels))\n",
-    "train_dataset = train_dataset.shuffle(buffer_size = 10000)\n",
+    "train_dataset = train_dataset.shuffle(buffer_size=10000)\n",
     "train_dataset = train_dataset.map(one_hot_label)\n",
-    "train_dataset = train_dataset.batch(batch_size = batch_size)\n",
+    "train_dataset = train_dataset.batch(batch_size=batch_size)\n",
     "print(train_dataset)\n",
     "\n",
     "# for test\n",
     "test_dataset = tf.data.Dataset.from_tensor_slices((test_data, test_labels))\n",
     "test_dataset = test_dataset.map(one_hot_label)\n",
-    "test_dataset = test_dataset.batch(batch_size = batch_size)\n",
+    "test_dataset = test_dataset.batch(batch_size=batch_size)\n",
     "print(test_dataset)"
    ]
   },
@@ -319,9 +329,8 @@
     "# use Adam optimizer \n",
     "optimizer = tf.train.AdamOptimizer(1e-4)\n",
     "\n",
-    "# record loss and accuracy for every epoch\n",
+    "# record loss for every epoch\n",
     "mean_loss = tf.keras.metrics.Mean(\"loss\")\n",
-    "mean_accuracy = tf.keras.metrics.Mean(\"accuracy\")\n",
     "\n",
     "# save loss and accuracy history for plot\n",
     "loss_history = []\n",
@@ -365,7 +374,6 @@
     "    global_step += 1\n",
     "    \n",
     "    mean_loss(loss_value)\n",
-    "    mean_accuracy(acc_value)\n",
     "    loss_history.append((global_step, mean_loss.result().numpy()))\n",
     "    \n",
     "    if global_step % 10 == 0:\n",
@@ -374,13 +382,14 @@
     "      duration = time.time() - start_time\n",
     "      examples_per_sec = batch_size / float(duration) \n",
     "      print(\"epochs: {:.2f}, step: {}, loss: {:.3g}, accuracy: {:.4g}% ({:.2f} examples/sec; {:.4f} sec/batch)\".format(\n",
-    "          epochs, global_step, mean_loss.result().numpy(), mean_accuracy.result().numpy()*100, examples_per_sec, duration))\n",
+    "          epochs, global_step, mean_loss.result().numpy(), acc_value.numpy()*100, examples_per_sec, duration))\n",
     "      \n",
     "  # save mean accuracy for plot\n",
-    "  accuracy_history.append((global_step, mean_accuracy.result().numpy()))\n",
+    "  accuracy_history.append((global_step, acc_value.numpy()*100))\n",
     "\n",
     "  # clear the history\n",
-    "  mean_accuracy.reset_states()\n",
+    "  mean_loss.reset_states()\n",
+    "  acc_object.reset_states()\n",
     "\n",
     "print(\"training done!\")"
    ]
@@ -445,6 +454,8 @@
    },
    "outputs": [],
    "source": [
+    "acc_object.reset_states()\n",
+    "\n",
     "for images, labels in test_dataset:\n",
     "  predictions = model(images)\n",
     "  acc_object(labels, predictions)\n",
