--- a/tf.version.2/03.cnn/03.mnist.LeNet5.with.regularization.ipynb
+++ b/tf.version.2/03.cnn/03.mnist.LeNet5.with.regularization.ipynb
@@ -57,12 +57,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.compat.v1 import ConfigProto\n",
-    "from tensorflow.compat.v1 import InteractiveSession\n",
+    "print('TensorFlow version: {}'.format(tf.__version__))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if you have a memeory trouble then uncomment it\n",
+    "# from tensorflow.compat.v1 import ConfigProto\n",
+    "# from tensorflow.compat.v1 import InteractiveSession\n",
     "\n",
-    "config = ConfigProto()\n",
-    "config.gpu_options.allow_growth = True\n",
-    "session = InteractiveSession(config=config)"
+    "# config = ConfigProto()\n",
+    "# config.gpu_options.allow_growth = True\n",
+    "# session = InteractiveSession(config=config)"
    ]
   },
   {
@@ -339,11 +349,10 @@
     "# use Adam optimizer \n",
     "optimizer = tf.train.AdamOptimizer(1e-4)\n",
     "\n",
-    "# record loss and accuracy for every epoch\n",
+    "# record loss for every epoch\n",
     "mean_ce = tf.keras.metrics.Mean(\"cross_entropy\")\n",
     "mean_l2 = tf.keras.metrics.Mean(\"l2_loss\")\n",
     "mean_total_loss = tf.keras.metrics.Mean(\"total_loss\")\n",
-    "mean_accuracy = tf.keras.metrics.Mean(\"accuracy\")\n",
     "\n",
     "# save loss and accuracy history for plot\n",
     "cross_entropy_history = []\n",
@@ -393,7 +402,6 @@
     "    mean_ce(cross_entropy)\n",
     "    mean_l2(l2_loss)\n",
     "    mean_total_loss(total_loss)\n",
-    "    mean_accuracy(acc_value)\n",
     "    \n",
     "    cross_entropy_history.append((global_step, mean_ce.result().numpy()))\n",
     "    l2_loss_history.append((global_step, mean_l2.result().numpy()))\n",
@@ -405,16 +413,16 @@
     "      duration = time.time() - start_time\n",
     "      examples_per_sec = batch_size / float(duration) \n",
     "      print(\"epochs: {:.2f}, step: {}, loss: {:.4g}, accuracy: {:.4g}% ({:.2f} examples/sec; {:.4f} sec/batch)\".format(\n",
-    "          epochs, global_step, mean_total_loss.result().numpy(), mean_accuracy.result().numpy()*100, examples_per_sec, duration))\n",
+    "          epochs, global_step, mean_total_loss.result().numpy(), acc_value.numpy()*100, examples_per_sec, duration))\n",
     "      \n",
     "  # save mean accuracy for plot\n",
-    "  accuracy_history.append((global_step, mean_accuracy.result().numpy()))\n",
+    "  accuracy_history.append((global_step, acc_value.numpy()*100))\n",
     "\n",
     "  # clear the history\n",
     "  mean_ce.reset_states()\n",
     "  mean_l2.reset_states()\n",
     "  mean_total_loss.reset_states()\n",
-    "  mean_accuracy.reset_states()\n",
+    "  acc_object.reset_states()\n",
     "\n",
     "print(\"training done!\")"
    ]
@@ -489,6 +497,8 @@
    },
    "outputs": [],
    "source": [
+    "acc_object.reset_states()\n",
+    "\n",
     "for images, labels in test_dataset:\n",
     "  predictions = model(images)\n",
     "  acc_object(labels, predictions)\n",
