--- a/tf.version.2/03.cnn/05.transfer.learning.ipynb
+++ b/tf.version.2/03.cnn/05.transfer.learning.ipynb
@@ -50,12 +50,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.compat.v1 import ConfigProto\n",
-    "from tensorflow.compat.v1 import InteractiveSession\n",
+    "print('TensorFlow version: {}'.format(tf.__version__))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if you have a memeory trouble then uncomment it\n",
+    "# from tensorflow.compat.v1 import ConfigProto\n",
+    "# from tensorflow.compat.v1 import InteractiveSession\n",
     "\n",
-    "config = ConfigProto()\n",
-    "config.gpu_options.allow_growth = True\n",
-    "session = InteractiveSession(config=config)"
+    "# config = ConfigProto()\n",
+    "# config.gpu_options.allow_growth = True\n",
+    "# session = InteractiveSession(config=config)"
    ]
   },
   {
