--- a/tf.version.2/04.rnn/04.text.generation.ipynb
+++ b/tf.version.2/04.rnn/04.text.generation.ipynb
@@ -48,6 +48,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('TensorFlow version: {}'.format(tf.__version__))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
