--- a/tf.version.2/03.cnn/04.vgg16.ipynb
+++ b/tf.version.2/03.cnn/04.vgg16.ipynb
@@ -47,12 +47,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.compat.v1 import ConfigProto\n",
-    "from tensorflow.compat.v1 import InteractiveSession\n",
+    "print('TensorFlow version: {}'.format(tf.__version__))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if you have a memeory trouble then uncomment it\n",
+    "# from tensorflow.compat.v1 import ConfigProto\n",
+    "# from tensorflow.compat.v1 import InteractiveSession\n",
     "\n",
-    "config = ConfigProto()\n",
-    "config.gpu_options.allow_growth = True\n",
-    "session = InteractiveSession(config=config)"
+    "# config = ConfigProto()\n",
+    "# config.gpu_options.allow_growth = True\n",
+    "# session = InteractiveSession(config=config)"
    ]
   },
   {
@@ -267,7 +277,7 @@
    "outputs": [],
    "source": [
     "category_names = []\n",
-    "with open('../../datasets/imagnet.classname.txt', 'r') as f:\n",
+    "with open('../../input_data/imagenet.classname.txt', 'r') as f:\n",
     "  for line in f.readlines():\n",
     "    category_names.append(line.strip())"
    ]
