--- a/tf.version.2/04.rnn/03.sentiment.classfication.imdb.ipynb
+++ b/tf.version.2/04.rnn/03.sentiment.classfication.imdb.ipynb
@@ -49,6 +49,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('TensorFlow version: {}'.format(tf.__version__))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
