--- a/tf.version.2/04.rnn/04.text.generation.ipynb
+++ b/tf.version.2/04.rnn/04.text.generation.ipynb
@@ -740,7 +740,7 @@
     "  # Number of characters to generate\n",
     "  num_generate = 1000\n",
     "\n",
-    "  # Converting our start string to numbers (vectorizing) \n",
+    "  # Converting our start string to numbers (vectorizing)\n",
     "  input_eval = [char2idx[s] for s in start_string]\n",
     "  input_eval = tf.expand_dims(input_eval, 0)\n",
     "\n",
@@ -759,14 +759,14 @@
     "      # remove the batch dimension\n",
     "      predictions = tf.squeeze(predictions, 0)\n",
     "\n",
-    "      # using a multinomial distribution to predict the word returned by the model\n",
+    "      # using a categorical distribution to predict the word returned by the model\n",
     "      predictions = predictions / temperature\n",
-    "      predicted_id = tf.multinomial(predictions, num_samples=1)[-1,0].numpy()\n",
-    "      \n",
+    "      predicted_id = tf.random.categorical(predictions, num_samples=1)[-1,0].numpy()\n",
+    "\n",
     "      # We pass the predicted word as the next input to the model\n",
     "      # along with the previous hidden state\n",
     "      input_eval = tf.expand_dims([predicted_id], 0)\n",
-    "      \n",
+    "\n",
     "      text_generated.append(idx2char[predicted_id])\n",
     "\n",
     "  return (start_string + ''.join(text_generated))"
@@ -784,9 +784,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python [conda env:tf1.14]",
    "language": "python",
-   "name": "venv"
+   "name": "conda-env-tf1.14-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -798,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
